Add Yandex Monitoring authorization by service account key

--- a/plugins/outputs/yandex_cloud_monitoring/sample.conf
+++ b/plugins/outputs/yandex_cloud_monitoring/sample.conf
@@ -8,3 +8,7 @@
 
   ## All user metrics should be sent with "custom" service specified. Normally should not be changed
   # service = "custom"
+
+  # service_account_key_file = "/home/user/.config/yandex-cloud/monitoring.json"
+
+  # folder_id = ""
